--- a/ribbon-loadbalancer/build.gradle
+++ b/ribbon-loadbalancer/build.gradle
@@ -14,3 +14,12 @@ dependencies {
     testImplementation "org.slf4j:slf4j-log4j12:${slf4j_version}"
     testImplementation "com.sun.jersey:jersey-server:${jersey_version}"
 }
+
+task wrapper(type: Wrapper){
+    gradleVersion = '7.2'
+}
+
+task prepareKotlinBuildScriptModel {
+
+}
+
